# OpenAI-Realtime-API-POC

./: .gitignore  README.md  file.py  main.py  play_wav.py  pyproject.toml
realtime_voice_chat/core/: __init__.py  audio_handler.py  audio_processor.py  openai_client.py
realtime_voice_chat/examples/: telephone_operator.py
realtime_voice_chat/schemas/: event.py  session.py
realtime_voice_chat/utils/: __init__.py  converter.py  logging_config.py
